Entire video buffered at once instead of 60/30 second read ahead limit
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
People
(Reporter: ke5trel, Assigned: padenot)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-release-
diannaS
:
approval-mozilla-esr115+
|
Details | Review |
STR:
- Visit a long video with a non-dash player (eg https://yewtu.be/watch?v=ygdAxmWEmhU).
- Wait for the video to load, noting the buffer size and network activity.
Expected:
Buffers 60 seconds (desktop) or 30 seconds (mobile) ahead according to media.cache_readahead_limit or media.cache_readahead_limit.cellular.
Actual:
Entire video is buffered/downloaded at once.
Does not occur in a private window with browser.privatebrowsing.forceMediaMemoryCache = true.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=a708c20c4e36970e5a9bb9b244a6865ad6bdcc92&tochange=928afb6ad2a5dc2f68d9d0b29181162aaac56866
Regressed by Bug 1817997.
Comment 1•2 years ago
|
||
:padenot, since you are the author of the regressor, bug 1817997, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 2•2 years ago
|
||
Updated•2 years ago
|
Comment 5•2 years ago
|
||
| bugherder | ||
Comment 6•2 years ago
|
||
The patch landed in nightly and beta is affected.
:padenot, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox116towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 7•2 years ago
|
||
Comment on attachment 9343254 [details]
Bug 1842432 - Fix ChannelMediaDecoder::ComputePlaybackRate. r?alwu
Beta/Release Uplift Approval Request
- User impact if declined: Some media are downloaded in their entirety instead of only the leading portion being downloaded.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Load https://paul.cx/public/clark-villette-sonique.mp3, check how much is buffered, by looking at the grey line that fills the gutter. It should not fill the entire seek bar, meaning that only a small portion of the media is pre-downloaded.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The mistake is clear, the fix is clear, we're just restoring the code as it was.
- String changes made/needed:
- Is Android affected?: Yes
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Some media are downloaded in their entirety instead of only the leading portion being downloaded. This is an enormous waste of bandwidth and therefore of power and potentially money if the link is metered.
- User impact if declined: Very large data consumption compared to what it should be
- Fix Landed on Version: 117
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The mistake is clear, the fix is clear, we're just restoring the code as it was.
| Assignee | ||
Updated•2 years ago
|
Comment 8•2 years ago
|
||
:padenot we don't have any 115 dot release currently planned. However, we could include this as a ride-along if we do.
Is this safe for a release uplift request?
Updated•2 years ago
|
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Comment on attachment 9343254 [details]
Bug 1842432 - Fix ChannelMediaDecoder::ComputePlaybackRate. r?alwu
Approved for 116.0b6
Comment 11•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 12•2 years ago
•
|
||
I have reproduced the initial issue using the STR from Comment 7 on Firefox 116.0b5 on Windows 10.
Verified as fixed using the latest Nightly 117.0a1 (Build ID: 20230716213402) and Firefox 116.0b6 on Windows 10, macOS 11.7, and Ubuntu 22.04.
Comment 13•2 years ago
|
||
Comment on attachment 9343254 [details]
Bug 1842432 - Fix ChannelMediaDecoder::ComputePlaybackRate. r?alwu
Approved for 115.1esr
Comment 14•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 15•2 years ago
|
||
Comment on attachment 9343254 [details]
Bug 1842432 - Fix ChannelMediaDecoder::ComputePlaybackRate. r?alwu
We aren't planning any more dot releases this cycle. This fix will ship in 116/115.1esr going out on August 1.
Updated•2 years ago
|
Comment 16•2 years ago
|
||
Verified as fixed on Firefox 115.1.0esr - used a treeherder build - Build ID: 20230717211020 on Windows 10, Ubuntu 22.04, and macOS 11.7.
Description
•