Bug 1842432 - Fix ChannelMediaDecoder::ComputePlaybackRate. r=alwu, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D183249